--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
 html,
 body {
   width: 100%;
@@ -35,23 +36,9 @@ body {
 
 
 .homeBg {
-  background-repeat: no-repeat;
-  position: fixed;
-  background-image: linear-gradient(to right, rgba(8, 15, 110, 0.5), rgba(90, 142, 219, 0.53)),
-    url('https://res.cloudinary.com/hopekumordzie/image/upload/v1663938655/tablechat_ri3cgr.jpg');
-  ;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+
+  width: 100%;
   height: 105vh;
-  z-index: 1;
-  filter: brightness(45%);
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
-
-
 
 }
 
@@ -125,4 +112,3 @@ tr:nth-child(even) {
 
 
 }
-
