--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 
 /* width */
@@ -151,4 +151,8 @@ tr:nth-child(even) {
   100% {
     transform: rotate(360deg);
   }
+}
+
+.font-montserrat{
+  font-family: 'Montserrat', sans-serif;
 }
